--- a/starlark/Cargo.toml
+++ b/starlark/Cargo.toml
@@ -33,6 +33,7 @@ either = "1.6.1"
 static_assertions = "1.1.0"
 memoffset = "0.6.4"
 thiserror = "1.0.30"
+bazel = { version = "0.1.0", path = "../bazel" }
 starlark_derive = { version = "0.9.0-pre", path = "../starlark_derive" }
 starlark_map = { version = "0.9.0-pre", path = "../starlark_map" }
 gazebo.version = "0.8.0"
