Update to clap v4 and fix deprecations

--- a/starlark/Cargo.toml
+++ b/starlark/Cargo.toml
@@ -60,7 +60,7 @@ argfile = "0.1.0"
 num-bigint = "0.4.3"
 num-traits = "0.2"
 inventory = "0.1.10"
-clap = { version = "3.2.22", features = ["derive"] }
+clap = { version = "4.0.7", features = ["derive", "wrap_help", "cargo"] }
 
 [dev-dependencies]
 rand = { version = "0.8.4", features = ["small_rng"] }
