feat: add temporary bazel binary
includes implementation of bazel-specific logic such as resolving files,
render as load, and string completion

--- a/vscode/package.json
+++ b/vscode/package.json
@@ -36,7 +36,8 @@
                     ".star",
                     ".sky",
                     ".bxl",
-                    ".bzl"
+                    ".bzl",
+                    ".bazel"
                 ],
                 "filenames": [
                     "BUILD",
