--- a/starlark/Cargo.toml
+++ b/starlark/Cargo.toml
@@ -20,7 +20,7 @@ anyhow = "1.0.65"
 bumpalo = "3.8"
 debugserver-types = "0.5.0"
 derivative = "2.2"
-derive_more = "0.99"
+derive_more.workspace = true
 display_container = { workspace = true }
 dupe = { workspace = true }
 either = "1.8"
