Add a WASM/JS example
Based on the code in https://github.com/facebook/starlark-rust/issues/109#issuecomment-2225024605, with a few minor changes to make it work with stable and work for types that aren't string. Plus a slightly nicer HTML page where you can edit the input.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ members = [
     "starlark_bin",
     "starlark_derive",
     "starlark_lsp",
+    "starlark_js",
     "starlark_map",
     "starlark_syntax",
 ]
